tests/haste_node_precedence/haste_node_precedence.exp
Error ------------------------------------------------------------------------------------------------------ test.js:2:2

Cannot cast `foo` to string because number [1] is incompatible with string [2]. [incompatible-cast]

   test.js:2:2
   2| (foo: string);
       ^^^

References:
   foo.js:2:18
   2| module.exports = 0;
                       ^ [1]
   test.js:2:7
   2| (foo: string);
            ^^^^^^ [2]



Found 1 error
